# chatgpt-plugin-localhost-shell

./: README.md  blacklist.txt  openapi.yaml  openapi.yml  pyproject.toml  server.py
.well-known/: ai-plugin.json
